Horizontal scroll fix

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ main .content .imageBlock::before {
   position: absolute;
   left: 0;
   z-index: -1;
-  width: 100vw;
+  width: 100%;
   height: 604px;
   background-image: url("../images/sale_pick.jpg");
   background-size: cover;
