--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -155,7 +155,7 @@ main {
                 position: absolute;
                 left: 0;
                 z-index: -1;
-                width: 100vw;
+                width: 100%;
                 height: 604px;
                 background-image: url("../images/sale_pick.jpg");
                 background-size: cover;
